fixed mobile alignment

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -180,5 +180,6 @@ nav img {
     .brand-logo {
         margin: 0%;
         margin-top: -1.6%;
+        margin-left: -2.7%
     }
 }
